# src/main/java/com/example/bankcards/controller/UserController.java
@@ -2,8 +2,8 @@ package com.example.bankcards.controller;
 
 
 import com.example.bankcards.entity.User;
-import com.example.bankcards.repository.UserRepository;
 import com.example.bankcards.service.UserService;
+import io.swagger.v3.oas.annotations.Operation;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
@@ -18,16 +18,15 @@ import static com.example.bankcards.util.Const.*;
 @RestController
 @RequestMapping(REST_MAP)
 public class UserController {
-    private final UserRepository userRepository;
     private final UserService userService;
 
-    public UserController(UserRepository userRepository, UserService userService) {
-        this.userRepository = userRepository;
+    public UserController(UserService userService) {
         this.userService = userService;
     }
 
 
     //View users + filter + pagination
+    @Operation(summary="Админ просматривает пользователей. Фильтр по login, пагинация.")
     @GetMapping(REST_USER)
     @ResponseStatus(HttpStatus.OK)
     public List<User> getUsers(@RequestParam(defaultValue = "0") int page, //page number
@@ -37,6 +36,7 @@ public class UserController {
         return userService.getAllUsers(page, size, login);
     }
 
+    @Operation(summary="Админ создаёт пользователя.")
     @PostMapping(REST_USER)
     @ResponseStatus(HttpStatus.CREATED)
     public User addUser(@RequestBody User user) {
@@ -44,6 +44,7 @@ public class UserController {
         return userService.save(user);
     }
 
+    @Operation(summary="Админ изменяет пользователя.")
     @PutMapping(REST_USER+"/{id}")
     @ResponseStatus(HttpStatus.ACCEPTED)
     public User updateUser(@PathVariable Long id, @RequestBody User user) {
@@ -56,11 +57,12 @@ public class UserController {
         }
     }
 
+    @Operation(summary="Админ удаляет пользователя.")
     @DeleteMapping(REST_USER+"/{id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void deleteUser(@PathVariable Long id) {
         log.info("Try to delete User with id {}", id);
-        userRepository.deleteById(id);
+        userService.deleteById(id);
     }
 
     private ResponseStatusException badRequest(Exception e) {
